--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".PostDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyApplication.NoActionBar"
+            android:hardwareAccelerated="true" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
