--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MyApplication.Launcher"
             android:hardwareAccelerated="true">
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".PostDetailActivity"
+        <activity android:name=".view.activity.PostDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.MyApplication.NoActionBar"
             android:hardwareAccelerated="true" />
